# codeguard

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/agent/: code_reviewer.py  doc_reviewer.py  pipeline.py  security_scanner.py  tools.py
app/api/: review.py  webhook.py
app/middleware/: circuit_breaker.py  rate_limiter.py  webhook_auth.py
app/models/: database.py  schemas.py
app/services/: github.py  knowledge_base.py  review_service.py
app/static/: index.html
app/tasks/: celery_app.py  review_task.py
docs/: 新手概念手册.md  模块说明与知识点手册.md
examples/: bad_code_demo.py  insecure_api.py
tests/: test_health.py
