[project]
name = "codeguard"
version = "0.1.0"
description = "AI-powered code review automation platform"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langchain>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "chromadb>=0.5",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
